configure hcb code snippet backgrounds

--- a/_assets/sass/config/config.scss
+++ b/_assets/sass/config/config.scss
@@ -8,6 +8,7 @@ $bg-category-list: #f2f7c4;
 $bg-comment-entries: #ade8f1;
 $bg-comment-field: #f7f7ab;
 $bg-template-title: gray;
+$bg-hcb-code: #ededbc;
 
 $bg-search-input: wheat;
 $bg-search-btn: wheat;
@@ -25,6 +26,7 @@ $color-placeholder: gray;
 $color-nav: gold;
 $color-required: red;
 $color-info: red;
+$color-hcb: black;
 
 $post-formatting-strong: darkgreen;
 $post-formatting-em: #fd1c44;
