--- a/_assets/sass/hcb.scss
+++ b/_assets/sass/hcb.scss
@@ -1,10 +1,26 @@
 
-/* hcb.scss */
+/* hcb.scss - partial file */
+
+/* 
 .hcb_wrap {
 
-    .hcb-clipboard {}
+    .hcb-clipboard {
+        
+        background: #ededbc;        
+        
+        &::before {
+            
+            color: red;
+        }
+        
+    }
     
     pre.prism {
+        
+        &::before {
+            
+            background: #ededbc;
+        }
         
         text-align: left;
 
@@ -20,4 +36,4 @@
         
     }
     
-}
+} */
