fix line numbers in hcb

--- a/_assets/sass/config/extends.scss
+++ b/_assets/sass/config/extends.scss
@@ -536,7 +536,7 @@
                 span {
 
                     text-align: left;
-                    display: inline-block;
+                    /*display: inline-block;*/
                 } 
 
             }
@@ -746,8 +746,9 @@
             &.alignright {
 
             }
-        }    
+        }
     }
+    
 }
 
 // [empty]
